--- a/system/grub/PKGBUILD
+++ b/system/grub/PKGBUILD
@@ -21,7 +21,7 @@ epoch=2
 _pkgver=2.12
 _unifont_ver='16.0.03'
 #pkgver=${_pkgver/-/}
-pkgver='2.12.r283.ga4da71da'
+pkgver='2.12.r292.g73d1c959'
 pkgrel=1
 url='https://www.gnu.org/software/grub/'
 arch=('x86_64')
@@ -121,7 +121,7 @@ b2sums=('a6cec7271c3ea54a99f02ee6bc0a5825c8be657af68ba9a32b39a5fe8bcb571fb1ba392
 _backports=(
   # current git master for loads of security fixes
   # https://lists.gnu.org/archive/html/grub-devel/2025-02/msg00024.html
-  "grub-${_pkgver}..a4da71dafeea519b034beb159dfe80c486c2107c"
+  "grub-${_pkgver}..73d1c959ea3417e9309ba8c6102d7d6dc7c94259"
 )
 
 _reverts=(
