--- a/system/libxml2/.artixlinux/pkgbase.yaml
+++ b/system/libxml2/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: libxml2
-  version: 2.14.2-2
-  arch:
-    - x86_64
-  pkgname:
-    - libxml2
-    - libxml2-docs
 actions:
   addRepo: system
   removeRepo: system-gremlins
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
-    version: 2.14.2-2
+    version: 2.14.3-1
     packages:
-      - libxml2-2.14.2-2-x86_64.pkg.tar.zst
-      - libxml2-docs-2.14.2-2-x86_64.pkg.tar.zst
+      - libxml2-2.14.3-1-x86_64.pkg.tar.zst
+      - libxml2-docs-2.14.3-1-x86_64.pkg.tar.zst
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: system
