--- a/world/erlang/.artixlinux/pkgbase.yaml
+++ b/world/erlang/.artixlinux/pkgbase.yaml
@@ -1,44 +1,4 @@
 ---
-pkgbase:
-  name: erlang
-  version: 27.3.3-2
-  arch:
-    - x86_64
-  pkgname:
-    - erlang
-    - erlang-headless
-    - erlang-core
-    - erlang-asn1
-    - erlang-common_test
-    - erlang-debugger
-    - erlang-dialyzer
-    - erlang-diameter
-    - erlang-edoc
-    - erlang-eldap
-    - erlang-erl_interface
-    - erlang-et
-    - erlang-eunit
-    - erlang-ftp
-    - erlang-inets
-    - erlang-jinterface
-    - erlang-megaco
-    - erlang-mnesia
-    - erlang-observer
-    - erlang-odbc
-    - erlang-os_mon
-    - erlang-parsetools
-    - erlang-public_key
-    - erlang-reltool
-    - erlang-runtime_tools
-    - erlang-sasl
-    - erlang-snmp
-    - erlang-ssh
-    - erlang-ssl
-    - erlang-syntax_tools
-    - erlang-tftp
-    - erlang-tools
-    - erlang-wx
-    - erlang-xmerl
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -51,71 +11,83 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 27.3.3-2
+    version: 27.3.4-1
     packages:
-      - erlang-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-headless-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-core-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-asn1-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-common_test-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-debugger-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-dialyzer-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-diameter-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-edoc-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-eldap-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-erl_interface-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-et-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-eunit-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-ftp-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-inets-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-jinterface-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-megaco-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-mnesia-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-observer-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-odbc-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-os_mon-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-parsetools-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-public_key-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-reltool-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-runtime_tools-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-sasl-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-snmp-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-ssh-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-ssl-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-syntax_tools-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-tftp-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-tools-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-wx-27.3.3-2-x86_64.pkg.tar.zst
-      - erlang-xmerl-27.3.3-2-x86_64.pkg.tar.zst
+      - erlang-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-headless-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-core-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-asn1-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-common_test-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-debugger-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-dialyzer-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-diameter-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-edoc-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-eldap-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-erl_interface-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-et-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-eunit-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-ftp-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-inets-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-jinterface-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-megaco-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-mnesia-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-observer-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-odbc-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-os_mon-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-parsetools-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-public_key-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-reltool-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-runtime_tools-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-sasl-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-snmp-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-ssh-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-ssl-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-syntax_tools-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-tftp-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-tools-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-wx-27.3.4-1-x86_64.pkg.tar.zst
+      - erlang-xmerl-27.3.4-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
