--- a/world/spice/PKGBUILD
+++ b/world/spice/PKGBUILD
@@ -1,21 +1,20 @@
-# Maintainer: Dudemanguy <dudemanguy@artixlinux.org>
-# Contributor: Sven-Hendrik Haase <svenstaro@archlinux.org>
+# Maintainer: Sven-Hendrik Haase <svenstaro@archlinux.org>
 # Contributor: Sergej Pupykin <pupykin.s+arch@gmail.com>
 # Contributor: Patryk Kowalczyk < patryk at kowalczyk dot ws>
 
 pkgname=spice
-pkgver=0.15.2
+pkgver=0.16.0
 pkgrel=1
 pkgdesc="SPICE server"
 arch=('x86_64')
 url="https://www.spice-space.org"
-license=('LGPL2.1')
+license=('LGPL-2.1-or-later')
 depends=('pixman' 'opus' 'libjpeg-turbo' 'glib2' 'libsasl' 'lz4' 'spice-protocol' 'libcacard')
-makedepends=('meson' 'python-six' 'python-pyparsing')
+makedepends=('meson' 'python-six' 'python-pyparsing' 'glib2-devel')
 checkdepends=('gdk-pixbuf2' 'glib-networking')
 provides=('libspice-server.so')
 source=("https://www.spice-space.org/download/releases/spice-server/$pkgname-$pkgver.tar.bz2"{,.sig})
-sha256sums=('6d9eb6117f03917471c4bc10004abecff48a79fb85eb85a1c45f023377015b81'
+sha256sums=('0a6ec9528f05371261bbb2d46ff35e7b5c45ff89bb975a99af95a5f20ff4717d'
             'SKIP')
 validpgpkeys=('206D3B352F566F3B0E6572E997D9123DE37A484F') # Victor Toso <victortoso@redhat.com>
 
