--- a/world/totem/.artixlinux/pkgbase.yaml
+++ b/world/totem/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: totem
-  version: 43.1+r37+gea6718427-1
-  arch:
-    - x86_64
-  pkgname:
-    - totem
 actions:
   addRepo: world
   removeRepo: null
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 43.1+r37+gea6718427-1
+    version: 43.1+r44+gbf65cd39c-1
     packages:
-      - totem-43.1+r37+gea6718427-1-x86_64.pkg.tar.zst
+      - totem-43.1+r44+gbf65cd39c-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
