--- a/galaxy/moksha-theme-zenithal/.artixlinux/pkgbase.yaml
+++ b/galaxy/moksha-theme-zenithal/.artixlinux/pkgbase.yaml
@@ -1,12 +1,5 @@
 ---
 team: galaxy
-pkgbase:
-  name: moksha-theme-zenithal
-  version: 0.0.1-1.1
-  arch:
-    - any
-  pkgname:
-    - moksha-theme-zenithal
 actions:
   addRepo: galaxy
   removeRepo: galaxy-gremlins
@@ -19,37 +12,49 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 0.0.1-1.1
+    version: 0.0.2-2
     packages:
-      - moksha-theme-zenithal-0.0.1-1.1-any.pkg.tar.zst
+      - moksha-theme-zenithal-0.0.2-2-any.pkg.tar.zst
+    debug: []
