--- a/galaxy/thunderbird/.artixlinux/pkgbase.yaml
+++ b/galaxy/thunderbird/.artixlinux/pkgbase.yaml
@@ -1,74 +1,4 @@
 ---
-pkgbase:
-  name: thunderbird
-  version: 138.0-1
-  arch:
-    - x86_64
-  pkgname:
-    - thunderbird
-    - thunderbird-i18n-af
-    - thunderbird-i18n-ar
-    - thunderbird-i18n-ast
-    - thunderbird-i18n-be
-    - thunderbird-i18n-bg
-    - thunderbird-i18n-br
-    - thunderbird-i18n-ca
-    - thunderbird-i18n-cak
-    - thunderbird-i18n-cs
-    - thunderbird-i18n-cy
-    - thunderbird-i18n-da
-    - thunderbird-i18n-de
-    - thunderbird-i18n-dsb
-    - thunderbird-i18n-el
-    - thunderbird-i18n-en-gb
-    - thunderbird-i18n-en-us
-    - thunderbird-i18n-es-ar
-    - thunderbird-i18n-es-es
-    - thunderbird-i18n-et
-    - thunderbird-i18n-eu
-    - thunderbird-i18n-fi
-    - thunderbird-i18n-fr
-    - thunderbird-i18n-fy-nl
-    - thunderbird-i18n-ga-ie
-    - thunderbird-i18n-gd
-    - thunderbird-i18n-gl
-    - thunderbird-i18n-he
-    - thunderbird-i18n-hr
-    - thunderbird-i18n-hsb
-    - thunderbird-i18n-hu
-    - thunderbird-i18n-hy-am
-    - thunderbird-i18n-id
-    - thunderbird-i18n-is
-    - thunderbird-i18n-it
-    - thunderbird-i18n-ja
-    - thunderbird-i18n-ka
-    - thunderbird-i18n-kab
-    - thunderbird-i18n-kk
-    - thunderbird-i18n-ko
-    - thunderbird-i18n-lt
-    - thunderbird-i18n-ms
-    - thunderbird-i18n-nb-no
-    - thunderbird-i18n-nl
-    - thunderbird-i18n-nn-no
-    - thunderbird-i18n-pa-in
-    - thunderbird-i18n-pl
-    - thunderbird-i18n-pt-br
-    - thunderbird-i18n-pt-pt
-    - thunderbird-i18n-rm
-    - thunderbird-i18n-ro
-    - thunderbird-i18n-ru
-    - thunderbird-i18n-sk
-    - thunderbird-i18n-sl
-    - thunderbird-i18n-sq
-    - thunderbird-i18n-sr
-    - thunderbird-i18n-sv-se
-    - thunderbird-i18n-th
-    - thunderbird-i18n-tr
-    - thunderbird-i18n-uk
-    - thunderbird-i18n-uz
-    - thunderbird-i18n-vi
-    - thunderbird-i18n-zh-cn
-    - thunderbird-i18n-zh-tw
 actions:
   addRepo: galaxy
   removeRepo: galaxy-gremlins
@@ -81,101 +11,113 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
-    version: 138.0-1
+    version: 138.0.1-1
     packages:
-      - thunderbird-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-af-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-ar-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-ast-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-be-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-bg-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-br-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-ca-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-cak-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-cs-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-cy-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-da-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-de-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-dsb-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-el-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-en-gb-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-en-us-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-es-ar-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-es-es-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-et-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-eu-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-fi-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-fr-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-fy-nl-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-ga-ie-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-gd-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-gl-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-he-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-hr-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-hsb-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-hu-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-hy-am-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-id-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-is-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-it-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-ja-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-ka-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-kab-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-kk-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-ko-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-lt-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-ms-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-nb-no-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-nl-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-nn-no-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-pa-in-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-pl-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-pt-br-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-pt-pt-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-rm-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-ro-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-ru-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-sk-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-sl-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-sq-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-sr-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-sv-se-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-th-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-tr-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-uk-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-uz-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-vi-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-zh-cn-138.0-1-x86_64.pkg.tar.zst
-      - thunderbird-i18n-zh-tw-138.0-1-x86_64.pkg.tar.zst
+      - thunderbird-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-af-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-ar-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-ast-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-be-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-bg-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-br-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-ca-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-cak-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-cs-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-cy-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-da-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-de-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-dsb-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-el-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-en-gb-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-en-us-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-es-ar-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-es-es-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-et-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-eu-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-fi-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-fr-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-fy-nl-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-ga-ie-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-gd-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-gl-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-he-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-hr-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-hsb-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-hu-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-hy-am-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-id-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-is-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-it-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-ja-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-ka-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-kab-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-kk-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-ko-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-lt-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-ms-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-nb-no-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-nl-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-nn-no-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-pa-in-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-pl-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-pt-br-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-pt-pt-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-rm-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-ro-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-ru-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-sk-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-sl-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-sq-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-sr-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-sv-se-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-th-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-tr-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-uk-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-uz-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-vi-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-zh-cn-138.0.1-1-x86_64.pkg.tar.zst
+      - thunderbird-i18n-zh-tw-138.0.1-1-x86_64.pkg.tar.zst
+    debug: []
 team: galaxy
